Added filtering schedules.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,6 +5,7 @@
         font-family: 'Lexend', Times, serif;
         background-color: oklch(98.5% 0.001 106.423);
         user-select: none;
+        scrollbar-gutter: stable;
     }
 }
 
