--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,4 +11,19 @@
 
 @layer utilities {
     
+    .fade-in {
+        animation: fade-in 1s ease-in-out forwards;
+    }
+
+}
+
+@keyframes fade-in {
+
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+
 }
